[tool.poetry]
name = "convert-unmanaged"
version = "0.1.7"
description = ""
authors = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.22.0"

[tool.poetry.scripts]
convert-unmanaged = "convert_unmanaged.main:main"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
