[tool.poetry]
name = "convert-unmanaged"
version = "0.3.0"
description = "Prints status for unhandled fileformats"
authors = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.22.0"

[tool.poetry.scripts]
convert-unmanaged = "convert_unmanaged.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
