[tool.poetry]
name = "convert-unmanaged"
version = "0.4.0"
description = "Prints status for unhandled fileformats"
authors = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
convert-unmanaged = "convert_unmanaged.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
ruff = "^0.0.277"

[tool.mypy-.venv.'*']
ignore_errors = true

[tool.black]
line-length = 100

[tool.ruff]
select = [
    "C",
    "E",
    "F",
    "W",
   # "B", #TODO: Introduce this check. Will ask for some refactoring of error handling
    "I",
   # "C90", Checks for complexity, might be good but not essential
   # "N", #TODO: Introduce this check. Will force us to redo the naming of several functions
    "D",
    "UP",
    "YTT",
    "ANN",
   # "S", #TODO: Introduce this check. Will help us have secure calls to sub.process and such
    "BLE",
   # "FBT", #TODO: Introduce this check. Will asks us to remove boolean flags
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLE",
   # "PLR", #TODO: Introduce this check. Will suggest several large refactoring
    "PLW",
   # "TRY", #TODO: Introduce this check. Will help with our exception handling
    "RUF"
    ]
ignore = [
    "ANN002", # missing type anottation for *args
    "ANN003", # missing type anotation for **kwargs 
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "ANN201", # missing return type
    "ANN202", # missing return type
    "ANN206", # missing return type
    "ARG001", # missing type anotattion for args
    "BLE001", # catching general exceptions
    "D100", # missing docstring
    "D101", # missing docstring
    "D102", # missing docstring
    "D103", # missing docstring,
    "D104", # missing docstring,
    "D105", # missing docstring in magic method,
    "D106", # missing docstring in nested class,
    "D107", # missing docstring in __init__,
    "D203", # 0 blank line required before class docstring,
    "D204", # 1 blank line required after class docstring,
    "D212", # multi-line docstring summary should start at the first line,
    "D213", # multi-line docstring summary should start at the second line,
    "D300", # use triple docstring
    "E712", # comparison to True/False, we ignore because we use sqlalchemy
    "FBT001", # boolean arguement in function definition
    "N802", # name of function should be lower case
    "PLR2004", # magic value used in comparison
    "PT012", # ptest.raises should contain a simple statement
    "RET505", # unnecessary {branch} after return statement
    "S101", # use of assert,
    "TRY003", # avoid using long messages outside exception class
    "UP007", # not using | in type anotations
    "INP001", # implicit namespace without __init__ (throws errors in tests)
    "PLW2901", # redefing loop variables
    "C901", # complexity check
    "ISC001", # check for implicit concatanation of str on one line, not compatabil with black.
    ]
line-length = 100
exclude = [
    ".venv",
    "env",
    "venv",
    ".git",
    "__pycache__",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    "install_poetry.py"
    ]

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["pytest.fixture"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
